se agrega una consulta raw sql en findAllMaestroActividad
