# src/routes/routes.ts
@@ -100,6 +100,54 @@ export function RegisterRoutes(app: Router) {
             }
         });
         // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+        app.get('/api/obras/backoffice/general/v1/alltipoperacion',
+            ...(fetchMiddlewares<RequestHandler>(BackofficeGeneralController)),
+            ...(fetchMiddlewares<RequestHandler>(BackofficeGeneralController.prototype.findAllTipoOperacion)),
+
+            function BackofficeGeneralController_findAllTipoOperacion(request: any, response: any, next: any) {
+            const args = {
+            };
+
+            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+
+            let validatedArgs: any[] = [];
+            try {
+                validatedArgs = getValidatedArgs(args, request, response);
+
+                const controller = new BackofficeGeneralController();
+
+
+              const promise = controller.findAllTipoOperacion.apply(controller, validatedArgs as any);
+              promiseHandler(controller, promise, response, 200, next);
+            } catch (err) {
+                return next(err);
+            }
+        });
+        // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+        app.get('/api/obras/backoffice/general/v1/allmaestroactividad',
+            ...(fetchMiddlewares<RequestHandler>(BackofficeGeneralController)),
+            ...(fetchMiddlewares<RequestHandler>(BackofficeGeneralController.prototype.findAllMaestroActividad)),
+
+            function BackofficeGeneralController_findAllMaestroActividad(request: any, response: any, next: any) {
+            const args = {
+            };
+
+            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+
+            let validatedArgs: any[] = [];
+            try {
+                validatedArgs = getValidatedArgs(args, request, response);
+
+                const controller = new BackofficeGeneralController();
+
+
+              const promise = controller.findAllMaestroActividad.apply(controller, validatedArgs as any);
+              promiseHandler(controller, promise, response, 200, next);
+            } catch (err) {
+                return next(err);
+            }
+        });
+        // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
         app.post('/api/auth/v1/signin',
             ...(fetchMiddlewares<RequestHandler>(AuthController)),
             ...(fetchMiddlewares<RequestHandler>(AuthController.prototype.signIn)),
